# starhunt

./: .dockerignore  .env.sample  .gitignore  .secrets.sample  Dockerfile  README.md  compose.yaml  pyproject.toml
db/: 001_schema.sql
scripts/: consume.py  pretty.py  work.py
starhunt/: api.py  astro.py  conesearches.py  consumer.py  db.py  events.py  logging.py  main.py  notices.py  queries.py  queue.py  summary.py  timeline.py  utils.py  worker.py
starhunt/api/: app.py  responses.py
starhunt/db/: __init__.py  conesearches.py  connection.py  event_summaries.py  events.py  jobs.py  notices.py
tests/: conftest.py  test_api.py  test_archive_hypotheses.py  test_astro.py  test_cli.py  test_consumer.py  test_db.py  test_events.py  test_hypothesis.py  test_logging.py  test_main.py  test_pretty_log.py  test_queries.py  test_queue.py  test_timeline.py  test_work_cli.py  test_worker.py
tests/fixtures/: 000000000002_3969_gcn_classic_voevent_fermi_gbm_alert.xml  000000000005_3972_gcn_classic_voevent_fermi_gbm_alert.xml  000000000007_3974_gcn_classic_voevent_fermi_gbm_alert.xml  000000000008_3975_gcn_classic_voevent_fermi_gbm_alert.xml  000000000009_3976_gcn_classic_voevent_fermi_gbm_alert.xml  000000000010_3977_gcn_classic_voevent_fermi_gbm_alert.xml  000000000018_3985_gcn_classic_voevent_fermi_gbm_alert.xml  000000000019_3986_gcn_classic_voevent_fermi_gbm_alert.xml  000000000020_3987_gcn_classic_voevent_fermi_gbm_alert.xml  000000000021_3988_gcn_classic_voevent_fermi_gbm_alert.xml  000000000022_3989_gcn_classic_voevent_fermi_gbm_alert.xml  (+359 more)
(+611 files in other folders)
