[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "starhunt"
version = "0.1.0"
description = "Tools for searching optical counterparts to high-energy astrophysical transients."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "gcn-kafka>=0.3.4",
    "gcn-notice-parser>=0.1.0",
    "psycopg[binary]>=3.3.4",
    "redis>=8.0.0",
    "rq>=2.9.1",
    "rq-dashboard>=0.8.7",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
]
