[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "starhunt"
version = "0.1.0"
description = "Tools for searching optical counterparts to high-energy astrophysical transients."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "confluent-kafka>=2.14.2",
    "gcn-kafka>=0.3.4",
    "gcn-notice-parser>=0.1.1",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pytest>=9.1.0",
    "rich>=15.0.0",
]

[project.scripts]
consume = 'scripts.consume:main'
work = 'scripts.work:main'
pretty = 'scripts.pretty:main'

[tool.pytest.ini_options]
markers = [
    "smoke: tests that call live external services",
]
